@@ -8,8 +8,10 @@ import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import uk.gov.pmrv.api.files.attachments.service.FileAttachmentService;
+import uk.gov.netz.api.files.attachments.service.FileAttachmentService;
 
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.Set;
 import java.util.UUID;
 
@@ -32,7 +34,7 @@ class DoalAttachmentsValidatorTest {
     void attachmentsExist() {
         UUID attachment1 = UUID.randomUUID();
         UUID attachment2 = UUID.randomUUID();
-        final Set<UUID> sectionAttachments = Set.of(attachment1, attachment2);
+        final Set<UUID> sectionAttachments = new HashSet<>(Arrays.asList(attachment1, attachment2, null));
 
         when(fileAttachmentService.fileAttachmentsExist(
                 Set.of(attachment1.toString(), attachment2.toString()))).thenReturn(true);
@@ -68,7 +70,7 @@ class DoalAttachmentsValidatorTest {
     void sectionAttachmentsReferenced_not_exist() {
         UUID attachment1 = UUID.randomUUID();
         UUID attachment2 = UUID.randomUUID();
-        final Set<UUID> sectionAttachments = Set.of(attachment1, attachment2);
+        final Set<UUID> sectionAttachments =  new HashSet<>(Arrays.asList(attachment1, attachment2, null));
         final Set<UUID> doalAttachments = Set.of(attachment1, UUID.randomUUID());
 
         boolean result = validator.attachmentsReferenced(sectionAttachments, doalAttachments);
